# rules_oci-cc-image-example

./: README.md
bzlmod/: BUILD.bazel  MODULE.bazel  README.md  hello-world.cc
others/: README.md  WORKSPACE
